Update and rename Catalogo GeoTech.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Catálogo de Productos</title></head>
+<head><title>CatÃ¡logo de Productos</title></head>
 <style>
 body { font-family: Arial; }
 .producto { margin-bottom: 25px; }
@@ -19,18 +19,18 @@ function buscar() {
 </script>
 </head>
 <body>
-<h1>Catálogo de Productos</h1>
+<h1>CatÃ¡logo de Productos</h1>
 <input type='text' id='search' class='buscador' placeholder='Buscar producto...' onkeyup='buscar()'>
 <div class='producto'>
 <h2>Pantalla de Privacidad para Monitor 19.5 pulgadas</h2>
 <p><b>Precio:</b> L.250</p>
 <img src="Privacidad_Monitor.jpeg" alt="Producto 1" width="200">
 <img src="Privacidad_Monitor2.jpeg" alt="Producto 1" width="200">
-<p>Filtro de privacidad para monitor que bloquea hasta un 60% de la visibilidad lateral, evitando que otras personas vean tu pantalla.<br>Reduce reflejos, protege tus datos y brinda una experiencia de uso más segura. Ideal para oficinas, clases y trabajo remoto.</p>
+<p>Filtro de privacidad para monitor que bloquea hasta un 60% de la visibilidad lateral, evitando que otras personas vean tu pantalla.<br>Reduce reflejos, protege tus datos y brinda una experiencia de uso mÃ¡s segura. Ideal para oficinas, clases y trabajo remoto.</p>
 </div>
 <div class='producto'>
 <h2>Producto 2</h2>
-<p>Soporte metálico resistente para computadora.</p>
+<p>Soporte metÃ¡lico resistente para computadora.</p>
 <p><b>Precio:</b> L.375</p>
 <img src="foto2.jpg" alt="Producto 2" width="200">
 </div>
