--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ function buscar() {
 <div class='producto'>
 <h2>Protector de Privacidad para Monitor 19.5 pulgadas</h2>
 <p><b>Precio:</b> L.400</p>
-<img src="Privacidad_Monitor.jpeg" alt="Producto 1" width="200">
-<img src="Privacidad_Monitor2.jpeg" alt="Producto 1" width="200">
+<img src="Privacidad_Monitor.jpeg" alt="Producto 1" width="200" onclick="window.open(this.src)">
+<img src="Privacidad_Monitor2.jpeg" alt="Producto 1" width="200" onclick="window.open(this.src)">
 <p>Filtro de privacidad para monitor que bloquea hasta un 60% de la visibilidad lateral, evitando que otras personas vean tu pantalla.<br>Reduce reflejos, protege tus datos y brinda una experiencia de uso más segura. Ideal para oficinas, clases y trabajo remoto.</p>
 </div>
 <div class='producto'>
 <h2>Protector de Privacidad para Monitor 21.5 pulgadas</h2>
 <p><b>Precio:</b> L.500</p>
-<img src="Privacidad_Monitor.jpg" alt="Producto 2" width="200">
-<img src="Privacidad_Monitor21.jpg" alt="Producto 2" width="200">
+<img src="Privacidad_Monitor.jpeg" alt="Producto 2" width="200" onclick="window.open(this.src)">
+<img src="Privacidad_Monitor_21.jpeg" alt="Producto 2" width="200" onclick="window.open(this.src)">
 <p>Filtro de privacidad para monitor que bloquea hasta un 60% de la visibilidad lateral, evitando que otras personas vean tu pantalla.<br>Reduce reflejos, protege tus datos y brinda una experiencia de uso más segura. Ideal para oficinas, clases y trabajo remoto.</p>
 </div>
 </body>
