--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-    <meta charset="UTF-8">
-<head><title>Catálogo de Productos GeoStore</title></head>
+<head><title>Cat&aacute;logo de Productos GeoStore</title></head>
 <style>
 body { font-family: Arial; }
 .producto { margin-bottom: 25px; }
